<resources>
    <string name="app_name">TRUES 2.0</string>
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">Bienvenido</string>
    <string name="invalid_username">Usuario incorrecto</string>
    <string name="invalid_password">Contraseña incorrecta</string>
    <string name="login_failed">Error al iniciar sesión</string>
    <string name="ingresar_como_invitado">Ingresar como invitado</string>
    <string name="sesion_iniciada">Ha iniciado sesión como: </string>
    <string name="llenar_bd">Llenar base de datos</string>
    <string name="title_activity_menu_invitado">MenuInvitadoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_calendario">Calendario académico</string>
    <string name="title_tramites">Trámites</string>
    <string name="title_activity_menu_alumno">MenuAlumnoActivity</string>
    <string name="title_mis_tramites">Mis trámites</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="title_activity_menu_admin">MenuAdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_agregar_tramite">Agregar trámite</string>
    <string name="menu_administrar_tramites">Administrar trámites</string>
    <string name="menu_cambiar_calendario">Administrar calendario</string>
    <string name="menu_agregar_actividad">Agregar actividad</string>
    <string name="menu_administrar_actividades">Administrar actividades</string>
    <string name="title_usuario">Usuario</string>
    <string name="eliminar">Eliminar</string>
    <string name="dialog_facultad_preferida">¿En cuál facultad está interesado?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar">Editar</string>
    <string name="fecha_inicio">Fecha de inicio</string>
    <string name="fecha_fin">Fecha de fin</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="dialog_actualizar_actividad">Actualizar actividad</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="responsable">Responsable:</string>
    <string name="ubicacion">Ubicación</string>
    <string name="cargos">Cargos</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_eliminacion">¿Realmente quieres eliminar este elemento?</string>
    <string name="no_recuperable">Se eliminará tu progreso y no podrás recuperarlo.</string>
    <string name="quitar_tramite">Quitar trámite</string>
    <string name="actualizar_tramite">Actualizar trámite</string>
    <string name="paso">Paso</string>
    <string name="requisito">Requisito</string>
    <string name="documento">Documento</string>
    <string name="tramite">Trámite</string>
    <string name="datos_incorrectos">Por favor ingrese los datos correctamente.</string>
    <string name="agregar_pasos">Agregar pasos</string>
    <string name="complejidad">Estime la complejidad</string>
    <string name="agregar_documento">Agregar documento</string>
    <string name="url">Enlace URL</string>
    <string name="agregar_requisito">Agregar requisito</string>
    <string name="advertencia">Además se eliminarán todas sus dependencias y no podrás recuperarlas.</string>
    <string name="actualizar_paso">Actualizar paso</string>
    <string name="actualizar_requisito">Actualizar requisito</string>
    <string name="actualizar_documento">Acrualizar documento</string>
    <string name="permiso">Permiso</string>
    <string name="asignar_permisos">Asignar permisos</string>
    <string name="gestionar_permisos">Gestionar permisos</string>
    <string name="quitar_permisos">Quitar permisos</string>
    <string name="pasos">Pasos</string>
    <string name="documentos">Documentos</string>
    <string name="requisitos">Requisitos</string>
    <string name="actualizar_personal">Actualizar personal</string>
    <string name="personal">Personal</string>
    <string name="unidad_admin">Unidad</string>
    <string name="cargo">Cargo</string>
    <string name="menu_agregar_personal">Agregar personal</string>
    <string name="agregar_unidad">Agregar unidad administrativa</string>
    <string name="menu_administracion">Administración</string>
    <string name="menu_administrar_personal">Administrar personal</string>
    <string name="title_administracion">Administración</string>
    <string name="title_personal">Personal administrativo</string>
    <string name="quitar_unidad">Quitar unidad</string>
    <string name="agregar_cargo">Agregar cargo</string>
    <string name="quitar_cargo">Quitar cargo</string>
    <string name="agregar_ubicacion">Agregar ubicación</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="altitud">Altitud</string>
    <string name="descripcion">Descripción</string>
    <string name="quitar_ubicacion">Quitar ubicación</string>
    <string name="usuario">"Usuario: "</string>
    <string name="bienvenido">¡Ya casi está! solo necesitamos que ingreses unos datos.</string>
    <string name="confirmar">Confirmar contraseña</string>
    <string name="facebook_app_id">257338822160284</string>
    <string name="fb_login_protocol_scheme">fb257338822160284</string>
    <string name="iniciar_con">Iniciar con</string>
    <string name="title_activity_presentacion">PresentacionActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="finalizar">Finalizar</string>
    <string name="bienvenido_a">Bienvenido a TRUES</string>
    <string name="intro">Una aplicación que te ayudará a acceder a la información de los trámites que se realizan en la Universidad de El Salvador, con la cuál podrás obtener los datos necesarios sobre requisitos, pasos, documentos y ubicaciones. Todo ello con el fin de facilitar los procesos academicos.</string>
    <string name="intro_login">Existen varias opciones para iniciar sesión. Si ya tienes un usuario, utiliza tus credenciales o escanea tu carnet, si no, puedes ingresar como invitado. Además, es posible registrarte usando tu cuenta de Google o Facebook.</string>
    <string name="intro_calendario">En el calendario encontrarás todas las actividades programadas por tu facultad en el presente ciclo. Además, si accedes a una actividad, verás los trámites que puedes realizar durante ese periodo.</string>
    <string name="intro_trámite">Podrás ver el listado de trámites disponibles en tu facultad y acceder a las opciones tocando uno de estos.</string>
    <string name="intro_tramites">Desde esta pantalla accederás a las propiedades de cada trámite. Además, puedes iniciar un proceso si así lo deseas.</string>
    <string name="intro_mis_tramites">Cuando inicias un proceso, podrás verlo en la pestaña \"Mis trámites\". En esta pantalla llevarás un control de todos los trámites que estas realizando actualmente y de su progreso.</string>
    <string name="intro_mis_pasos">Si deslizas un paso hacia la izquierda, este quedará marcado como completado y se actualizará el progreso del respectivo trámite.</string>
    <string name="intro_paso">Aquí se muestra la información relacionada a un paso. Para obtener detalles sobre el responsable, basta con tocar el recuadro. En la parte inferior, verás un mapa con la ubicación donde debes realizar el proceso.</string>
    <string name="intro_documentos">¡Ya casi finalizamos! \nPor último, en esta sección podrás ver los documentos necesarios para un respectivo trámite, o si lo prefieres también lo puedes descargar.</string>
    <string name="intro_fin">TRUES es un proyecto realizado por estudiantes de la Facultad de Ingeniería y Arquitectura en la Universidad de El Salvador. \n\n¡Esperamos que te sea útil!</string>
    <string name="bienvenido2">"¡Bienvenido "</string>
    <string name="error_conexion">Ocurrió un error con la conexión, intentelo de nuevo.</string>
    <string name="error_usuario">Este usuario no existe en la base de datos.</string>
    <string name="error_barra">Error al escanear,  por favor enfoque bien su carnet.</string>
    <string name="revisar_conexion">Por favor revise su conexión.</string>
    <string name="permiso_concedido">Permiso concedido correctamente.</string>
    <string name="error_permiso">El usuario seleccionado ya posee este permiso.</string>
    <string name="permiso_suprimido">Se ha eliminado este permiso corectamente.</string>
    <string name="error">Error</string>
    <string name="error_actividad">Error, esta actividad ya existe.</string>
    <string name="actividad_creada">Actividad creada con éxito.</string>
    <string name="actividad_actualizada">La actividad se ha actualizado correctamente.</string>
    <string name="error_actualizar">Error al actualizar.</string>
    <string name="tramite_agregado">Se ha agregado un trámite correctamente.</string>
    <string name="tramite_error">Este trámite ya fue agregado.</string>
    <string name="tramite_suprimido">Este trámite ha sido eliminado correctamente.</string>
    <string name="error_cargo">Este cargo ya existe.</string>
    <string name="cargo_creado">Cargo agregado correctamente.</string>
    <string name="error_documento">Este documento ya existe.</string>
    <string name="documento_creado">Documento creado correctamente.</string>
    <string name="cambios_guardados">Se han guardado los cambios exitosamente.</string>
    <string name="documento_eliminado">Documento eliminado correctamente.</string>
    <string name="paso_eliminado">Paso eliminado correctamente.</string>
    <string name="error_personal_cargo">La persona ya tiene asignado este cargo.</string>
    <string name="personal_creado">Se ha creado un nuevo personal.</string>
    <string name="personal_error">Esta persona ya existe en la base de datos.</string>
    <string name="error_eliminar">No puedes eliminar este elemento ya que existen muchos objetos relacionados a él.</string>
    <string name="personal_eliminado">Personal eliminado correctamente</string>
    <string name="error_personal">La persona ya se encuentra registrada en esta unidad.</string>
    <string name="requisito_creado">Se ha creado un nuevo requisito.</string>
    <string name="error_requisito">Este requisito ya existe en la base de datos.</string>
    <string name="error_duplicado">Error, este registro ya existe.</string>
    <string name="elimindo">Se ha eliminado correctamente.</string>
    <string name="no_existe">Este registro no existe.</string>
    <string name="ubicacion_creada">Se ha creado una nueva ubicación.</string>
    <string name="unidad_creada">Se ha creado una nueva unidad administrativa.</string>
    <string name="progreso_eliminado">Se ha eliminado su progreso.</string>
    <string name="iniciar_proceso">Iniciar proceso</string>
    <string name="seleccionar_facultad">Seleccione una facultad...</string>
    <string name="seleccionar_tramite">Seleccione un trámite...</string>
    <string name="seleccionar_cargo">Seleccione un cargo...</string>
</resources>